k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - port: 8000          # The port exposed by the service
      targetPort: 5000    # The port the app is listening on
      nodePort: 30000     # The port on each Node
