k8s/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
spec:
  selector:
    app: database
  ports:
    - port: 5000          
      targetPort: 5000
